test mobile view

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="col-12">
                 <div class="mx-auto tm-gallery-container">
                     <div class="grid tm-gallery">
-                      <a href="img/gallery-img-01.jpg">
+                      <a href="img/1.webp">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/1.webp" alt="Image" class="img-fluid">
                           <figcaption>
