test jpg instead of webp

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             <div class="col-12">
                 <div class="mx-auto tm-gallery-container">
                     <div class="grid tm-gallery">
-                      <a href="img/1.webp">
+                      <a href="img/1.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/1.webp" alt="Image" class="img-fluid">
+                          <img src="img/1.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Package <span>Deals</span> </i></h2>
                           </figcaption>
