converted webp to jpg

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/patio.webp" alt="Image" class="img-fluid tm-intro-img" />
+            <img src="img/patio.jpg" alt="Image" class="img-fluid tm-intro-img" />
           </div>
           <div class="col-lg-6">
             <div class="tm-intro-text-container">
@@ -143,7 +143,7 @@
                       </a>
                       <a href="img/gallery-img-02.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/2.webp" alt="Image" class="img-fluid">
+                          <img src="img/2.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>3D <span>Property</span> Scans</i></h2>
                           </figcaption>
@@ -151,7 +151,7 @@
                       </a>
                       <a href="img/gallery-img-03.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/3.webp" alt="Image" class="img-fluid">
+                          <img src="img/3.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>HDR <span>Photos</span> </i></h2>
                           </figcaption>
@@ -159,7 +159,7 @@
                       </a>
                       <a href="img/gallery-img-04.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/4.webp" alt="Image" class="img-fluid">
+                          <img src="img/4.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Aerial <span>Drone</span> Photography</i></h2>
                           </figcaption>
@@ -167,7 +167,7 @@
                       </a>
                       <a href="img/gallery-img-05.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/5.webp" alt="Image" class="img-fluid">
+                          <img src="img/5.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Property <span>Line</span> Overlays</i></h2>
                           </figcaption>
@@ -175,7 +175,7 @@
                       </a>
                       <a href="img/gallery-img-06.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/6.webp" alt="Image" class="img-fluid">
+                          <img src="img/6.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>2D <span>Floor</span> Plans</i></h2>
                           </figcaption>
@@ -183,7 +183,7 @@
                       </a>
                       <a href="img/gallery-img-01.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/7.webp" alt="Image" class="img-fluid">
+                          <img src="img/7.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Meta <span>Data</span> Tagging</i></h2>
                           </figcaption>
@@ -191,7 +191,7 @@
                       </a>
                       <a href="img/gallery-img-02.jpg">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/8.webp" alt="Image" class="img-fluid">
+                          <img src="img/8.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i> <span>Consult</span> </i></h2>
                           </figcaption>
