change capture > tour

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="tm-intro-text-container">
                 <h2 class="tm-text-primary mb-4 tm-section-title">About Us</h2>
                 <p class="mb-4 tm-intro-text">
-                  3DC is the <strong>premier 3D capture and aerial real estate photographer </strong> serving the DC Metro region. We are passionate about capturing the beauty, craftsmanship, and design details of your home and living spaces.
+                  3DC is the <strong>premier 3D tour and aerial real estate photographer </strong> serving the DC Metro region. We are passionate about capturing the beauty, craftsmanship, and design details of your home and living spaces.
               </p>
                 <p class="mb-5 tm-intro-text">
                    At 3DC, we strive to show the things that make your spaces special, by harnessing the tools of <strong>light, shadow, color, and composition</strong>, alongside the latest technology. We look forward to putting your property in it's best light and capturing something both stunning and unique.
