rollover images and copyright

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-02.jpg">
+                      <a href="img/2.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/2.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -149,7 +149,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-03.jpg">
+                      <a href="img/3.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/3.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -157,7 +157,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-04.jpg">
+                      <a href="img/4.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/4.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -165,7 +165,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-05.jpg">
+                      <a href="img/5.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/5.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -173,7 +173,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-06.jpg">
+                      <a href="img/6.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/6.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -181,7 +181,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-01.jpg">
+                      <a href="img/7.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/7.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -189,7 +189,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-02.jpg">
+                      <a href="img/8.jpg">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/8.jpg" alt="Image" class="img-fluid">
                           <figcaption>
@@ -250,8 +250,9 @@
       <footer class="text-center small tm-footer">
           <p class="mb-0">
             Copyright &copy; 3DC
-
+<!--
             - Design: <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
+            -->
           </p>
         </footer>
     </section>
