minor changes html

--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
                   <span class="mb-0">3dcsans@gmail.com</span>
               </a>
             </div>
-            <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
+            <!-- <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <a href="https://www.google.com/maps" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-map-marker-alt mr-4"></i>
                   <span class="mb-0">Location on Maps</span>
               </a>
-            </div>
+            </div> -->
             <!-- <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <form action="" method="get">
                 <input name="email" type="email" placeholder="Subscribe your email" class="tm-input" required />
@@ -250,9 +250,9 @@
       <footer class="text-center small tm-footer">
           <p class="mb-0">
             Copyright &copy; 3DC
-<!--
-            - Design: <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
-            -->
+          </p>
+          <p>
+            Design: Modified <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
           </p>
         </footer>
     </section>
