changed some placeholder text

--- a/index.html
+++ b/index.html
@@ -89,30 +89,24 @@
         <div class="row tm-section-pad-top">
           <div class="col-lg-4">
             <i class="fas fa-4x fa-camera text-center tm-icon"></i>
-            <h4 class="text-center tm-text-primary mb-4">Curabitur at elit eu risus</h4>
+            <h4 class="text-center tm-text-primary mb-4">Capture</h4>
             <p>
-              Sed ultrices sit amet mi eu malesuada. Cras ultricies gravida
-              nisi, ac pellentesque nunc tincidunt quis. Aenean at ornare lacus.
-              Duis imperdiet lacus justo.
+              Extract High-Dynamic-Range (HDR) photos from our state-of-the-art devices and leverage the talents of our experienced photographers to capture your property in its best light.
             </p>
           </div>
 
         <div class="col-lg-4 mt-5 mt-lg-0">
           <i class="fas fa-4x fa-home text-center tm-icon"></i>
-          <h4 class="text-center tm-text-primary mb-4">Nunc sed metus vel nisi</h4>
+          <h4 class="text-center tm-text-primary mb-4">Render</h4>
           <p>
-            Praesent ut finibus leo. Duis et tempus ipsum, id pretium nunc.
-            Vivamus imperdiet sem quis orci pharetra convallis. Nunc a tempus
-            nisi, sed fringilla purus. In hac habitasse platea.
+            Present your home as you see it in life-like, explorable 3-D renderings. Your viewer will be fully immursed, able to look in every room and walk up any stairs, all from the comfort of their armchair.
           </p>
         </div>
         <div class="col-lg-4 mt-5 mt-lg-0">
           <i class="fas fa-4x fa-paper-plane text-center tm-icon"></i>
-          <h4 class="text-center tm-text-primary mb-4">Fusce sed nisi sagittis</h4>
+          <h4 class="text-center tm-text-primary mb-4">Fly</h4>
           <p>
-            Donec vestibulum libero nisl. Curabitur ac orci ac lorem blandit
-            volutpat. Sed ac sodales nibh, ut porttitor elit. Sed id dui mi.
-            Vestibulum ante ipsum primis in faucibus.
+            Get a bird's eye view of your property, using our flying drones to show all that your property has to offer, including landscaping and the surrouding topography.
           </p>
         </div>
       </div>
@@ -249,7 +243,7 @@
       </div>
       <footer class="text-center small tm-footer">
           <p class="mb-0">
-            Copyright &copy; 3DC
+             &copy; 3DC
           </p>
           <p>
             Design: Modified <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
