--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
           <div class="text-center col-12">
               <h2 class="tm-text-primary tm-section-title mb-4">Services</h2>
               <p class="mx-auto tm-work-description">
-                "Curabitur ac orci ac lorem blandit volutpat. Sed ac sodales nibh, ut
-                porttitor elit. Sed id dui mi. Vestibulum ante ipsum primis in faucibus
-                orci luctus et ultrices posuere cubilia."
+                "3DC associates are available for scheduling. Give us a call or shoot us an e-mail to find out how we can help you!"
               </p>
           </div>
         </div>
@@ -222,9 +220,9 @@
               </a>
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="mailto:3dcsans@gmail.com" class="tm-contact-item-link">
+              <a href="mailto:email@3dc.biz" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
-                  <span class="mb-0">3dcsans@gmail.com</span>
+                  <span class="mb-0">email@3dc.biz</span>
               </a>
             </div>
             <!-- <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
