--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   3DC is the <strong>premier 3D tour and aerial real estate photographer </strong> serving the DC Metro region. We are passionate about capturing the beauty, craftsmanship, and design details of your home and living spaces.
               </p>
                 <p class="mb-5 tm-intro-text">
-                   At 3DC, we strive to show the things that make your spaces special, by harnessing the tools of <strong>light, shadow, color, and composition</strong>, alongside the latest technology. We look forward to putting your property in it's best light and capturing something both stunning and unique.
+                   At 3DC, we strive to show the things that make your spaces special, by harnessing the tools of <strong>light, shadow, color, and composition</strong>, alongside the latest technology. We look forward to putting your property in its best light and capturing something both stunning and unique.
                   <!--<a rel="nofollow" href="https://templatemo.com">templatemo</a>. Thank you.
                   Curabitur dapibus tristique enim a imperdiet. Etiam
               tristique sem sed condimentum posuere.--> </p>
@@ -117,7 +117,7 @@
           <div class="text-center col-12">
               <h2 class="tm-text-primary tm-section-title mb-4">Services</h2>
               <p class="mx-auto tm-work-description">
-                "3DC associates are available for scheduling. Give us a call or shoot us an e-mail to find out how we can help you!"
+                We offer a wide variety of a la carte services. From our signature 3D scanning and aerial photos to our personalized tour accents and property line overlays, we've got you covered! Ask us about saving by bundling services together. 
               </p>
           </div>
         </div>
@@ -206,10 +206,7 @@
                   <div class="tm-underline-inner"></div>
                 </div>
                 <p class="mb-5">
-                  Nullam tincidunt, lacus a suscipit luctus, elit turpis tincidunt dui,
-                  non tempus sem turpis vitae lorem. Maecenas eget odio in sapien ultrices
-                  viverra vitae vel leo. Curabitur at elit eu risus pharetra pellentesque
-                  at at velit.
+                  3DC associates are available for scheduling. Give us a call or shoot us an e-mail to find out how we can help you!
                 </p>
             </div>
 
