--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head profile="http://www.3dc.biz">
+  <link rel="icon"
+        type="image/ico"
+        href="img/favicon_io/favicon.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -117,7 +120,7 @@
           <div class="text-center col-12">
               <h2 class="tm-text-primary tm-section-title mb-4">Services</h2>
               <p class="mx-auto tm-work-description">
-                We offer a wide variety of a la carte services. From our signature 3D scanning and aerial photos to our personalized tour accents and property line overlays, we've got you covered! Ask us about saving by bundling services together. 
+                We offer a wide variety of a la carte services. From our signature 3D scanning and aerial photos to our personalized tour accents and property line overlays, we've got you covered! Ask us about saving by bundling services together.
               </p>
           </div>
         </div>
