logo add in header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <nav class="navbar navbar-expand-md tm-navbar" id="tmNav">
         <div class="container">
           <div class="tm-next">
-              <a href="#hero" class="navbar-brand">[insert logo]</a>
+              <a href="#hero" class="navbar-brand">
+                <img src="img/favicon_io/apple-touch-icon2.png" alt="Image" />
+              </a>
           </div>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
