added contingency-shadow class just in casee background image does not load

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="tm-section-pad-top tm-parallax-2">
+    <section id="contact" class="tm-section-pad-top tm-parallax-2 contingency-shadow">
       <div class="container tm-container-contact">
         <div class="row">
             <div class="col-12">
