changed "kuula" to "tour"
changed "kuula" to "tour"

--- a/mantz.html
+++ b/mantz.html
@@ -7,6 +7,6 @@
      <meta http-equiv="refresh" content="3; URL=https://kuula.co/share/collection/79yp2?logo=1&info=1&logosize=200&fs=1&vr=1&initload=0&thumbs=-1" />
    </head>
    <body>
-     <p>Redirecting to <a href="https://kuula.co/share/collection/79yp2?logo=1&info=1&logosize=200&fs=1&vr=1&initload=0&thumbs=-1">Kuula</a></p>
+     <p>Redirecting to <a href="https://kuula.co/share/collection/79yp2?logo=1&info=1&logosize=200&fs=1&vr=1&initload=0&thumbs=-1">Tour</a></p>
    </body>
 </html>
